custom boostrap added

--- a/app/javascript/stylesheets/bootstrap_custom.scss
+++ b/app/javascript/stylesheets/bootstrap_custom.scss
@@ -37,3 +37,80 @@
 @import '~bootstrap/scss/_transitions.scss';
 @import '~bootstrap/scss/_utilities.scss';
 
+* {
+  text-decoration: none;
+}
+
+a, a:hover {
+  color: white;
+}
+
+.sign {
+  float: right;
+  margin-top: -40px;
+}
+
+.menu {
+  background-color: gray;
+  height: 75px;
+}
+
+.div-login-sign {
+  border-radius: 5px;
+  background-color: #f2f8f9;
+  padding: 20px;
+  margin: 50px 400px;
+}
+
+.field {
+  width: 100%;
+  border-radius: 4px;
+}
+
+.field > input[type=text], select {
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.field > input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+}
+
+@media (min-width: 768px) and (max-width: 1020px) {
+  .div-form-offer {
+    margin: 0px 200px;
+  }
+
+  .div-login-sign {
+    margin: 50px 200px;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 767px) {
+  .div-form-offer {
+    margin: 0px 100px;
+  }
+
+  .div-login-sign {
+    margin: 50px 100px;
+  }
+}
+
+@media (max-width: 480px) {
+  .div-form-offer {
+    margin: 0px 20px;
+  }
+
+  .div-login-sign {
+    margin: 50px 20px;
+  }
+}
+
