--- a/app/views/diets/_meal_fields.erb
+++ b/app/views/diets/_meal_fields.erb
@@ -15,7 +15,9 @@
       <%= f.select :meal_type, Meal.meal_type.options %>
     </div>
 
-    <%# <%= link_to_remove_association "remove", f %>
+    <button class="btn btn-danger">
+      <%= link_to_remove_association "remove", f %>
+    </button>
   </div>
 </li>
 
