--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,8 +7,16 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h6 class="">Hello, <%= current_user.name %></h6>
-    <h4 class="">Your Progress </h4>
+    <h6>Hello, <%= current_user.name %></h6>
+
+    <div class="info-box">
+      <span class="info-box-icon bg-green"><i class="fa fa-heartbeat" aria-hidden="true"></i></span>
+      <span class="info-box-text">IMC</span>
+      <span class="info-box-content"><%= @imc %></span>
+    </div>
+
+    <h4>Your Progress <i class="fa fa-line-chart" aria-hidden="true"></i></h4>
+    <%= area_chart(@weights) %>
 
     <%= render file: 'diets/index', diets: @diets %>
   </body>
