--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WeightMonitor</title>
+    <title>Weight Monitor</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-    <p class="alert"><%= alert %></p>
     <%= yield %>
+
+    <p class="alert"><%= alert %></p>
   </body>
 </html>
