--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,15 +9,29 @@
   <body>
     <h6>Hello, <%= current_user.name %></h6>
 
-    <div class="info-box">
-      <span class="info-box-icon bg-green"><i class="fa fa-heartbeat" aria-hidden="true"></i></span>
-      <span class="info-box-text">IMC</span>
-      <span class="info-box-content"><%= @imc %></span>
+    <div class="row">
+      <div class="info-box">
+        <span class="info-box-icon bg-crimson"><i class="fa fa-heartbeat" aria-hidden="true"></i></span>
+        <span class="info-box-text">IMC</span>
+        <span class="info-box-content"><%= @imc %></span>
+      </div>
+
+      <div class="info-box">
+        <%= link_to diets_path do %>
+          <span class="info-box-icon bg-aqua"><i class="fa fa-cutlery" aria-hidden="true"></i></span>
+          <span class="info-box-text"></span>
+          <span class="info-box-content"><%= :DIETS %></span>
+        <% end %>
+      </div>
+
+      <div class="info-box">
+        <span class="info-box-icon bg-green"><i class="fa fa-heartbeat" aria-hidden="true"></i></span>
+        <span class="info-box-text">GOAL</span>
+        <span class="info-box-content"><%=  %></span>
+      </div>
     </div>
 
     <h4>Your Progress <i class="fa fa-line-chart" aria-hidden="true"></i></h4>
     <%= area_chart(@weights) %>
-
-    <%= render file: 'diets/index', diets: @diets %>
   </body>
 </html>
