--- a/app/views/diets/index.html.erb
+++ b/app/views/diets/index.html.erb
@@ -1,5 +1,10 @@
+<%= render "dashboard/menu" %>
+
+<br/>
+
 <p id="notice"><%= notice %></p>
 
+<hr/>
 <h1>Diets</h1>
 
 <table class="table table-striped table-dark">
