extra feature: show trophy when user achieve his target

--- a/app/javascript/stylesheets/bootstrap_custom.scss
+++ b/app/javascript/stylesheets/bootstrap_custom.scss
@@ -107,6 +107,10 @@ a, a:hover {
   color: green;
 }
 
+.fa-clock-o, .fa-trophy {
+  color: black;
+}
+
 .bg-green {
   background-color: #00a65a;
 }
