--- a/app/views/diets/_meal_fields.erb
+++ b/app/views/diets/_meal_fields.erb
@@ -16,7 +16,7 @@
     </div>
 
     <button class="btn btn-danger">
-      <%= link_to_remove_association "remove", f %>
+      <%= link_to_remove_association t('remove'), f %>
     </button>
   </div>
 </li>
