--- a/app/views/diets/new.html.erb
+++ b/app/views/diets/new.html.erb
@@ -2,8 +2,7 @@
 
 </br>
 
-<h1>New Diet</h1>
+<h1><%= t('diet.new') %></h1>
 
 <%= render 'form', diet: @diet %>
 
-<%= link_to 'Back', diets_path %>
