--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,12 +7,12 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h6>Hello, <%= current_user.name %></h6>
+    <h6><%= t('hello') %><%= current_user.name %></h6>
 
     <div class="row">
       <div class="info-box">
         <span class="info-box-icon bg-crimson"><i class="fa fa-heartbeat" aria-hidden="true"></i></span>
-        <span class="info-box-text">IMC</span>
+        <span class="info-box-text"><%= t('imc') %></span>
         <span class="info-box-content"><%= @imc %></span>
       </div>
 
@@ -20,13 +20,13 @@
         <%= link_to diets_path do %>
           <span class="info-box-icon bg-aqua"><i class="fa fa-cutlery" aria-hidden="true"></i></span>
           <span class="info-box-text"></span>
-          <span class="info-box-content"><%= :DIETS %></span>
+          <span class="info-box-content"><%= t('diet.title') %></span>
         <% end %>
       </div>
 
       <div class="info-box">
         <span class="info-box-icon bg-green"><i class="fa fa-star" aria-hidden="true"></i></span>
-        <span class="info-box-text">GOAL</span>
+        <span class="info-box-text"><%= t('goal') %></span>
         <span class="info-box-content">
           <% if @goal %>
             <i class="fa fa-trophy" aria-hidden="true"></i>
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <h4>Your Progress <i class="fa fa-line-chart" aria-hidden="true"></i></h4>
+    <h4><%= t('progress') %><i class="fa fa-line-chart" aria-hidden="true"></i></h4>
     <%= area_chart(@weights) %>
   </body>
 </html>
