--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="div-login-sign">
 
-  <h2>Sign up</h2>
+  <h2><%= t('sign.up') %></h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -34,7 +34,7 @@
 
     <br/>
     <div class="actions">
-      <%= f.submit "Sign up", class: 'btn btn-success' %>
+      <%= f.submit t('sign.up'), class: 'btn btn-success' %>
     </div>
   <% end %>
 
