update weight type from integer to float

--- a/app/views/diets/_form.html.erb
+++ b/app/views/diets/_form.html.erb
@@ -28,12 +28,12 @@
 
     <div class="field">
       <%= form.label :initial_weight %>
-      <%= form.number_field :initial_weight %>
+      <%= form.number_field :initial_weight, step: :any %>
     </div>
 
     <div class="field">
       <%= form.label :target_weight %>
-      <%= form.number_field :target_weight %>
+      <%= form.number_field :target_weight, step: :any %>
     </div>
 
     <div class="field">
