--- a/app/views/weights/_form.html.erb
+++ b/app/views/weights/_form.html.erb
@@ -17,7 +17,7 @@
 
     <div class="field">
       <%= form.label :kg %>
-      <%= form.number_field :kg %>
+      <%= form.number_field :kg, step: :any %>
     </div>
 
     <div class="field">
