change project name to fit tracker

--- a/app/views/dashboard/_menu.html.erb
+++ b/app/views/dashboard/_menu.html.erb
@@ -7,6 +7,9 @@
         <%= link_to(t('weight.update'), new_weight_path) %>
       </button>
       <button class="btn btn-primary">
+        <%= link_to(t('running.new'), new_running_path) %>
+      </button>
+      <button class="btn btn-primary">
         <%= link_to(t('diet.new'), new_diet_path) %>
       </button>
     <% end %>
